--- a/net/test.html
+++ b/net/test.html
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark" data-a11y-animated-images="system">
   <head>
@@ -64,7 +57,7 @@
 
     
 
-  <meta name="request-id" content="F30A:2899:2494B70:4122AB2:62BD634C" data-pjax-transient="true"/><meta name="html-safe-nonce" content="458f4e9888cbb795c2e07b68567c8fe2a5cb9193df4a7420d31d651faf1d73d0" data-pjax-transient="true"/><meta name="visitor-payload" content="eyJyZWZlcnJlciI6IiIsInJlcXVlc3RfaWQiOiJGMzBBOjI4OTk6MjQ5NEI3MDo0MTIyQUIyOjYyQkQ2MzRDIiwidmlzaXRvcl9pZCI6IjQyODYwOTA5NjYwNTUzNDcwMjAiLCJyZWdpb25fZWRnZSI6ImlhZCIsInJlZ2lvbl9yZW5kZXIiOiJpYWQifQ==" data-pjax-transient="true"/><meta name="visitor-hmac" content="60856e3155d325aeb97666acc92ef477462559d21c30c00c8b9cbbd98bbdad04" data-pjax-transient="true"/>
+  <meta name="request-id" content="FDE4:0F85:20A4105:3ADEB27:62BD6F12" data-pjax-transient="true"/><meta name="html-safe-nonce" content="65f4e99a6f5a530b480792e2a757d23f932b13bf6365e3be3c78eee3bc61fca6" data-pjax-transient="true"/><meta name="visitor-payload" content="eyJyZWZlcnJlciI6IiIsInJlcXVlc3RfaWQiOiJGREU0OjBGODU6MjBBNDEwNTozQURFQjI3OjYyQkQ2RjEyIiwidmlzaXRvcl9pZCI6IjY3NDQ5MTY2ODE2NzMyNDAzMzgiLCJyZWdpb25fZWRnZSI6ImlhZCIsInJlZ2lvbl9yZW5kZXIiOiJpYWQifQ==" data-pjax-transient="true"/><meta name="visitor-hmac" content="317b2f242e672ae579623a694db52c5b38cfc4655c84c65e1bb590cd2a432edc" data-pjax-transient="true"/>
 
     <meta name="hovercard-subject-tag" content="repository:93446083" data-pjax-transient>
 
@@ -436,7 +429,7 @@
           spellcheck="false"
           autocomplete="off"
         >
-        <input type="hidden" data-csrf="true" class="js-data-jump-to-suggestions-path-csrf" value="BPz/sajbPE7RSe2tfpf07ZJM0lgNFQrqab0qHv2egZ5z0aQtphIIYcPJwJ46hU5UzIcEXJPwQAm0nANGK5oIHw==" />
+        <input type="hidden" data-csrf="true" class="js-data-jump-to-suggestions-path-csrf" value="9/3CpbcTZ1QW2tXgK6RYgSCDfqFd6+FBrCw0pw0NCAyBmbgmwDsr0ILB0Sqd3bpeJioHZbfPwj+4MwweOyXUvA==" />
         <input type="hidden" class="js-site-search-type-field" name="type" >
             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" aria-hidden="true" class="mr-1 header-search-key-slash"><path fill="none" stroke="#979A9C" opacity=".4" d="M3.5.5h12c1.7 0 3 1.3 3 3v13c0 1.7-1.3 3-3 3h-12c-1.7 0-3-1.3-3-3v-13c0-1.7 1.3-3 3-3z"></path><path fill="#979A9C" d="M11.8 6L8 15.1h-.9L10.8 6h1z"></path></svg>
 
@@ -1244,7 +1237,7 @@
 
           
 <div class="ml-1" data-test-selector="edit-dropdown-menu-component">
-  <form class="BtnGroup-parent js-update-url-with-hash " data-turbo="false" action="/aliyun/terraform-provider-alicloud/edit/v1.173.0/alicloud/data_source_alicloud_cs_kubernetes_version.go" accept-charset="UTF-8" method="post"><input type="hidden" name="authenticity_token" value="KAyNFcGfr8YfpIRGzyaZE9sERWg47T23SMVKW8kBjn8N-NJtBwZYMyEo0tW8B-Vyko6cnh4ly7YTahuebPrxfw" autocomplete="off" />
+  <form class="BtnGroup-parent js-update-url-with-hash " data-turbo="false" action="/aliyun/terraform-provider-alicloud/edit/v1.173.0/alicloud/data_source_alicloud_cs_kubernetes_version.go" accept-charset="UTF-8" method="post"><input type="hidden" name="authenticity_token" value="-t0tD4C3fIJsKXcEgFMBSoB2nTY1SwO59uyGSA_u0sJxPULUguAvMLQipGREx-RkPwcuhPTdZYtBHQ5Pb0cC3Q" autocomplete="off" />
     <button disabled="disabled" title="You must be signed in to make or propose changes" data-hotkey="e" data-disable-with="" data-test-selector="edit-icon-button" type="submit" data-view-component="true" class="btn-sm BtnGroup-item btn">  <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-pencil">
     <path fill-rule="evenodd" d="M11.013 1.427a1.75 1.75 0 012.474 0l1.086 1.086a1.75 1.75 0 010 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 01-.927-.928l.929-3.25a1.75 1.75 0 01.445-.758l8.61-8.61zm1.414 1.06a.25.25 0 00-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 000-.354l-1.086-1.086zM11.189 6.25L9.75 4.81l-6.286 6.287a.25.25 0 00-.064.108l-.558 1.953 1.953-.558a.249.249 0 00.108-.064l6.286-6.286z"></path>
 </svg>
@@ -1255,7 +1248,7 @@
 </summary>    <div class="SelectMenu right-0">
       <div class="SelectMenu-modal width-full">
         <div class="SelectMenu-list SelectMenu-list--borderless py-2">
-          <form class="SelectMenu-item js-update-url-with-hash " data-turbo="false" action="/aliyun/terraform-provider-alicloud/edit/v1.173.0/alicloud/data_source_alicloud_cs_kubernetes_version.go" accept-charset="UTF-8" method="post"><input type="hidden" name="authenticity_token" value="-qWytQy1lvovojNEYRkWg0s6HhN-kgNv3N_yq4RQmX_fUe3NyixhDxEuZdcSOGriArDH5Vha9W6HcKNuIavmfw" autocomplete="off" />
+          <form class="SelectMenu-item js-update-url-with-hash " data-turbo="false" action="/aliyun/terraform-provider-alicloud/edit/v1.173.0/alicloud/data_source_alicloud_cs_kubernetes_version.go" accept-charset="UTF-8" method="post"><input type="hidden" name="authenticity_token" value="VZJCHJSK0s7QOlsmFn9eviWWgg7NLOXn4p5A3qIX2cLeci3Hlt2BfAgxiEbS67uQmucxvAy6g9VVb8jZwr4J3Q" autocomplete="off" />
             <button disabled="disabled" title="You must be signed in to make or propose changes" data-test-selector="edit-text-button" type="submit" data-view-component="true" class="btn-invisible btn width-full d-flex flex-justify-between color-fg-muted text-normal p-0">  <div>Edit this file</div>
               <div class="color-fg-muted">E</div>
   
